name:                  haskoin-script
version:               0.0.1
synopsis:              Implementation of Bitcoin script parsing and evaluation
description:         
    This package provides functions for parsing and evaluating bitcoin
    transaction scripts. Data types are provided for building and
    deconstructing all of the standard input and output script types. 
homepage:              http://github.com/plaprade/haskoin-script
bug-reports:           http://github.com/plaprade/haskoin-script/issues
stability:             experimental
license:               PublicDomain
license-file:          UNLICENSE
author:                Philippe Laprade
maintainer:            plaprade+hackage@gmail.com
category:              Bitcoin, Finance, Network
build-type:            Simple
cabal-version:         >= 1.9.2

source-repository head
    type:     git
    location: git://github.com/plaprade/haskoin-script.git

library
    exposed-modules:   Network.Haskoin.Script,
                       Network.Haskoin.Script.Arbitrary
    other-modules:     Network.Haskoin.Script.Parser, 
                       Network.Haskoin.Script.SigHash
    build-depends:     base             == 4.6.*, 
                       binary           == 0.7.*, 
                       bytestring       == 0.10.*, 
                       mtl              == 2.1.*, 
                       haskoin-protocol == 0.0.*,
                       haskoin-crypto   == 0.0.*,
                       haskoin-util     == 0.0.*,
                       QuickCheck       == 2.6.*
    ghc-options:       -Wall -fno-warn-orphans

Test-Suite test-haskoin-script
    type:              exitcode-stdio-1.0
    main-is:           Main.hs
    build-depends:     base                       == 4.6.*, 
                       binary                     == 0.7.*, 
                       bytestring                 == 0.10.*, 
                       mtl                        == 2.1.*, 
                       haskoin-protocol           == 0.0.*,
                       haskoin-crypto             == 0.0.*,
                       haskoin-util               == 0.0.*,
                       QuickCheck                 == 2.6.*, 
                       test-framework             == 0.8.*, 
                       test-framework-quickcheck2 == 0.3.*, 
                       test-framework-hunit       == 0.3.*, 
                       HUnit                      == 1.2.*
    hs-source-dirs:    . tests
    ghc-options:       -Wall -fno-warn-orphans

